force-app/main/default/objects/Proposal__c/fields/Attorneys__c.field-meta.xml
<CustomField>
    <fullName>Attorneys__c</fullName>
    <label>Attorneys</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Configuration__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>67</fullName>
            </value>
            <value>
                <fullName>83</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>133</fullName>
            </value>
            <value>
                <fullName>167</fullName>
            </value>
            <value>
                <fullName>233</fullName>
            </value>
            <value>
                <fullName>300</fullName>
            </value>
            <value>
                <fullName>400</fullName>
            </value>
            <value>
                <fullName>500</fullName>
            </value>
            <value>
                <fullName>600</fullName>
            </value>
            <value>
                <fullName>800</fullName>
            </value>
            <value>
                <fullName>1000</fullName>
            </value>
            <value>
                <fullName>1200</fullName>
            </value>
            <value>
                <fullName>1400</fullName>
            </value>
            <value>
                <fullName>1600</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>