force-app/main/default/objects/Proposal__c/fields/Client_Matter__c.field-meta.xml
<CustomField>
    <fullName>Client_Matter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client / Matter</label>
    <type>Checkbox</type>
</CustomField>