force-app/main/default/objects/Proposal__c/fields/Client_Matter_Picture__c.field-meta.xml
<CustomField>
    <fullName>Client_Matter_Picture__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Matter Picture</label>
    <type>Checkbox</type>
</CustomField>