force-app/main/default/objects/Proposal__c/fields/Config_Option_3__c.field-meta.xml
<CustomField>
    <fullName>Config_Option_3__c</fullName>
    <label>Config Option 3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>3/440 &amp; 3/440c</fullName>
            </value>
            <value>
                <fullName>3/440 &amp; 3/110m</fullName>
            </value>
            <value>
                <fullName>3/440</fullName>
            </value>
            <value>
                <fullName>3/230 &amp; 3/230c</fullName>
            </value>
            <value>
                <fullName>3/230 &amp; 3/110m</fullName>
            </value>
            <value>
                <fullName>3/230</fullName>
            </value>
            <value>
                <fullName>3/110 &amp; 3/110c</fullName>
            </value>
            <value>
                <fullName>3/110 &amp; 3/110d</fullName>
            </value>
            <value>
                <fullName>3/110</fullName>
            </value>
            <value>
                <fullName>Limited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>