force-app/main/default/objects/Proposal__c/fields/Configuration_3__c.field-meta.xml
<CustomField>
    <fullName>Configuration_3__c</fullName>
    <label>Configuration 3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>DR</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Basic + Security</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>