force-app/main/default/objects/Proposal__c/fields/Configuration__c.field-meta.xml
<CustomField>
    <fullName>Configuration__c</fullName>
    <label>Package</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Integration &amp; Wall Builder</fullName>
            </value>
            <value>
                <fullName>Integration Builder</fullName>
            </value>
            <value>
                <fullName>Wall Builder</fullName>
            </value>
            <value>
                <fullName>Time Builder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>