force-app/main/default/objects/Proposal__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to indicate which contract this Proposal is related to.</description>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Proposals</relationshipLabel>
    <relationshipName>R00N50000001Qc4qEAC</relationshipName>
    <type>Lookup</type>
</CustomField>