force-app/main/default/objects/Proposal__c/fields/Custom_Config__c.field-meta.xml
<CustomField>
    <fullName>Custom_Config__c</fullName>
    <label>Custom Config</label>
    <type>TextArea</type>
</CustomField>