force-app/main/default/objects/Proposal__c/fields/Director_of_SE_Notes__c.field-meta.xml
<CustomField>
    <fullName>Director_of_SE_Notes__c</fullName>
    <label>Director of SE Notes</label>
    <type>TextArea</type>
</CustomField>