force-app/main/default/objects/Proposal__c/fields/Disaster_Recovery__c.field-meta.xml
<CustomField>
    <fullName>Disaster_Recovery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disaster Recovery</label>
    <type>Checkbox</type>
</CustomField>