force-app/main/default/objects/Proposal__c/fields/Implementation_Mgr_s_Notes__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Mgr_s_Notes__c</fullName>
    <label>Implementation Mgr&apos;s Notes</label>
    <type>TextArea</type>
</CustomField>