force-app/main/default/objects/Proposal__c/fields/Monitoring_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Monitoring_Reporting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monitoring &amp; Reporting</label>
    <type>Checkbox</type>
</CustomField>