force-app/main/default/objects/Proposal__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This links the proposal to an opportunity.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Proposals</relationshipLabel>
    <relationshipName>R00N50000001QYfdEAG</relationshipName>
    <type>Lookup</type>
</CustomField>