force-app/main/default/objects/Proposal__c/fields/Portals_Intranet_Details__c.field-meta.xml
<CustomField>
    <fullName>Portals_Intranet_Details__c</fullName>
    <label>Portals / Intranet Details</label>
    <type>TextArea</type>
</CustomField>