force-app/main/default/objects/Proposal__c/fields/Portals_Intranets_Picture__c.field-meta.xml
<CustomField>
    <fullName>Portals_Intranets_Picture__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portals / Intranets Picture</label>
    <type>Checkbox</type>
</CustomField>