force-app/main/default/objects/Proposal__c/fields/Principal_Author__c.field-meta.xml
<CustomField>
    <fullName>Principal_Author__c</fullName>
    <label>Principal Author</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Andrew Hill</fullName>
            </value>
            <value>
                <fullName>Bryan Yeung</fullName>
            </value>
            <value>
                <fullName>Clarence Hu</fullName>
            </value>
            <value>
                <fullName>Colby Smith</fullName>
            </value>
            <value>
                <fullName>Dan Bressler</fullName>
            </value>
            <value>
                <fullName>Dan Gill</fullName>
            </value>
            <value>
                <fullName>Don Coleman</fullName>
            </value>
            <value>
                <fullName>Jay Borenstein</fullName>
            </value>
            <value>
                <fullName>Jeff Armbrecht</fullName>
            </value>
            <value>
                <fullName>John Hall</fullName>
            </value>
            <value>
                <fullName>Kathy Englar</fullName>
            </value>
            <value>
                <fullName>Kelly Graves</fullName>
            </value>
            <value>
                <fullName>Kerry Stivaletti</fullName>
            </value>
            <value>
                <fullName>Ryan Ladisic</fullName>
            </value>
            <value>
                <fullName>Sameera Inapakutika</fullName>
            </value>
            <value>
                <fullName>Shalin Mantri</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>