force-app/main/default/objects/Proposal__c/fields/Reviewer_Approval__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reviewer Approval</label>
    <type>Checkbox</type>
</CustomField>