force-app/main/default/objects/Proposal__c/fields/Sales_Director_Approved__c.field-meta.xml
<CustomField>
    <fullName>Sales_Director_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box indicates whether the draft is fully approved by the Sales Director.</description>
    <label>Sales Director Approved</label>
    <type>Checkbox</type>
</CustomField>