force-app/main/default/objects/Proposal__c/fields/Sales_Directors_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Sales_Directors_Approval_Status__c</fullName>
    <label>Sales Director&apos;s Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>