force-app/main/default/objects/Proposal__c/fields/Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager__c</fullName>
    <label>Sales Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chris Erikstrup</fullName>
            </value>
            <value>
                <fullName>Don Coleman</fullName>
            </value>
            <value>
                <fullName>Eldean Ward</fullName>
            </value>
            <value>
                <fullName>Joe Welch</fullName>
            </value>
            <value>
                <fullName>Kathy Englar</fullName>
            </value>
            <value>
                <fullName>Kathy Kibby</fullName>
            </value>
            <value>
                <fullName>Kelly Graves</fullName>
            </value>
            <value>
                <fullName>Kerry Stivaletti</fullName>
            </value>
            <value>
                <fullName>Pat Archbold</fullName>
            </value>
            <value>
                <fullName>Colby Smith</fullName>
            </value>
            <value>
                <fullName>Dan Gill</fullName>
            </value>
            <value>
                <fullName>Kandace Donovan</fullName>
            </value>
            <value>
                <fullName>Mark Winders</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>