force-app/main/default/objects/Proposal__c/fields/Services_2__c.field-meta.xml
<CustomField>
    <fullName>Services_2__c</fullName>
    <label>Services 2</label>
    <type>TextArea</type>
</CustomField>