force-app/main/default/objects/Proposal__c/fields/Services_3__c.field-meta.xml
<CustomField>
    <fullName>Services_3__c</fullName>
    <label>Services 3</label>
    <type>TextArea</type>
</CustomField>