force-app/main/default/objects/Proposal__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>This field indicates the current status of the proposal.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Creating Initial Draft</fullName>
                <default>true</default>
                <label>Creating Initial Draft</label>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Sent to Customer</fullName>
            </value>
            <value>
                <fullName>Never Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>