force-app/main/default/objects/Proposal__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <label>Template</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>General New</fullName>
            </value>
            <value>
                <fullName>General Upgrade</fullName>
            </value>
            <value>
                <fullName>Pricing Only</fullName>
            </value>
            <value>
                <fullName>Walls Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>