force-app/main/default/objects/Proposal__c/fields/User_Provisioning_Details__c.field-meta.xml
<CustomField>
    <fullName>User_Provisioning_Details__c</fullName>
    <label>User Provisioning Details</label>
    <type>TextArea</type>
</CustomField>